--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,15 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.NavbarClipPathHere {
+  clip-path: polygon(0 0, 100% 0, 85% 100%, 14% 100%);
+}
+
+.NavbarClipPathShadowHere {
+  background: rgba(255, 255, 255, 0.2);
+  box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
+  backdrop-filter: blur(5px);
+  -webkit-backdrop-filter: blur(5px);
+}
+
