--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -4,12 +4,12 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: black;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: black;
     --foreground: #ededed;
   }
 }
@@ -18,6 +18,8 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+  max-width: 100%;
+  overflow-x: hidden;
 }
 
 .NavbarClipPathHere {
@@ -29,110 +31,4 @@ body {
   box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
   backdrop-filter: blur(5px);
   -webkit-backdrop-filter: blur(5px);
-}
-
-.rotating-text-wrapper h2 {
-  padding: 0.3em;
-  box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
-  animation-duration: 6s;
-  animation-iteration-count: infinite;
-  opacity: 0;
-}
-
-.rotating-text-wrapper h2:nth-child(1) {
-  background-color: black;
-  animation-name: rotating-text-1;
-}
-
-@keyframes rotating-text-1 {
-  0% {
-    transform: translateY(200%);
-    opacity: 0;
-  }
-  33% {
-    transform: translateY(100%);
-    opacity: 1;
-  }
-  34% {
-    opacity: 0;
-  }
-}
-
-.rotating-text-wrapper h2:nth-child(2) {
-  background-color: black;
-  animation-name: rotating-text-2;
-}
-
-@keyframes rotating-text-2 {
-  33% {
-    transform: translateY(100%);
-    opacity: 0;
-  }
-  66% {
-    transform: translateY(0);
-    opacity: 1;
-  }
-  67% {
-    opacity: 0;
-  }
-}
-
-.rotating-text-wrapper h2:nth-child(3) {
-  background-color: black;
-  animation-name: rotating-text-3;
-}
-
-@keyframes rotating-text-3 {
-  66% {
-    transform: translateY(0);
-    opacity: 0;
-  }
-  99% {
-    transform: translateY(-100%);
-    opacity: 1;
-  }
-  100% {
-    transform: translateY(-100%);
-    opacity: 0;
-  }
-}
-
-@media screen and (max-width: 576px) {
-  .rotating-text-wrapper {
-    font-size: 0.7rem;
-  }
-}
-
-
-.logo-slider {
-  overflow: hidden;
-  width: 1536px; /* Adjust as per your design */
-  display: flex;
-  align-items: center;
-}
-
-.logos-slide {
-  display: flex;
-  gap: 20px; /* Space between logos */
-  animation: scroll 15s linear infinite;
-}
-
-.logos-slide img {
-  height: 60px; /* Adjust as needed */
-  object-fit: contain;
-}
-
-.logos-slide::before,
-.logos-slide::after {
-  content: "";
-  display: flex;
-}
-
-@keyframes scroll {
-  0% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(-100%);
-  }
 }
