--- a/src/assets/css/animation.css
+++ b/src/assets/css/animation.css
@@ -1,4 +1,4 @@
-
+/* 
 .rotating-text-wrapper h2 {
     padding: 0.3em;
     box-shadow: 0 10px 10px rgba(0, 0, 0, 0.2);
@@ -102,4 +102,29 @@
     -webkit-border-radius: 3px;
     border-radius: 10px;
     background: white; 
+  } */
+
+
+
+
+
+
+
+
+
+
+  /* styles.css */
+@keyframes slideUp {
+  from {
+    transform: translateY(100px);
+    opacity: 0;
   }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+.slide-up {
+  animation: slideUp 0.8s ease-out forwards;
+}
